# ocr-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
ocr_results/071a0e1f343e4f099a804291465da0ba/: combined_ocr_result.json
ocr_results/e0b18f44e12b4581bfa73c09f30278e9/: combined_ocr_result.json
src/: config.py
src/app/: api.py
src/core/: ocr_engine.py  utils.py
src/service/: celery_app.py  celery_task.py
